src/test/ui/unused/unused-attr.stderr
error: unused attribute
  --> $DIR/unused-attr.rs:6:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unused-attr.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:9:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:14:5
   |
LL |     #[rustc_dummy]
   |     ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:12:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:22:9
   |
LL |         #[rustc_dummy]
   |         ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:20:5
   |
LL |     #[rustc_dummy]
   |     ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:18:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:30:9
   |
LL |         #[rustc_dummy]
   |         ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:27:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:37:5
   |
LL |     #[rustc_dummy]
   |     ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:35:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:43:5
   |
LL |     #[rustc_dummy]
   |     ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:45:5
   |
LL |     #[rustc_dummy]
   |     ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:41:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr.rs:4:1
   |
LL | #![rustc_dummy]
   | ^^^^^^^^^^^^^^^

error: aborting due to 15 previous errors

